deployment/base/keycloak/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.hauptspeicher.com`)
      kind: Rule
      services:
        - name: keycloak
          port: 8080
  tls:
    certResolver: myresolver
